Fix dark code block text contrast

--- a/src/pages/Article/Article.scss
+++ b/src/pages/Article/Article.scss
@@ -365,6 +365,7 @@
       border: 0;
       padding: 0;
       font-size: inherit;
+      color: inherit;
     }
   }
 
